--- a/estilo/estiloMedia.css
+++ b/estilo/estiloMedia.css
@@ -84,7 +84,7 @@ body{
     color: var(--textoUm);
     margin-top: 1em;
 }
-#nome, #email, #senha{
+#nome, #email, #estado{
     width: 100%;
     padding: .7em;
     border-radius: .25em;
@@ -119,10 +119,12 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
     padding: 2.5em;
 }
 .card{
-    width: 25%;
+    width: 22%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -144,6 +146,9 @@ body{
 }
 #card3{
     background-image: url(../imagens/card3.jpg);
+}
+#card4{
+    background-image: url(../imagens/card4.jpg);
 }
 .card p{
     color: var(--textoUm);
@@ -225,7 +230,7 @@ body{
 
 
 /* Tablet */
-@media (max-width: 780px){
+@media (max-width: 800px){
     .cabecalho{
         flex-direction: column;
     }
@@ -254,10 +259,11 @@ body{
         padding: 1em;
     }
     .cards{
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
     .card{
-        width: 90%;
+        width: 45%;
         margin-bottom: 3em;
     }
     .card div{
